# neon-lang

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  lexer.cpp  lexer.hpp  main.cpp
.github/workflows/: build.yml  clang_tidy,yml  clang_tidy.yml  precommit.yml  test.yml
include/: ast.hpp  compiler.h  compiler.hpp  err_codes.h  err_codes.hpp  formula.h  fscanner.hpp  lexer.h  lexer.hpp  neon.hpp  scanner.hpp
samples/: example1.ne  example2.ne
src/: CMakeLists.txt  compiler.cpp  file_scanner.cpp  formula.cpp  fscanner.cpp  lexer.cpp  main.cpp  neon.cpp  parser.cpp  str_scanner.cpp  tac_gen.cpp
test/: CMakeLists.txt  test_formula.cpp  test_lexer.cpp
